--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <div class="login-modal-container">
+        <div class="login-main-container">
+            <button type="button" class="close-login-modal-button">
+                X
+            </button>
+            <div class="login-input-container">
+                <form class="login-form">
+                    <label class="login-email">
+                        Email
+                        <input type="email" class="email-input" value="" required>
+                    </label>
+                    <label class="login-password">
+                        Password
+                        <input type="password" class="password-input" required>
+                    </label>
+                    <button type="submit" class="login-submit-button">Log In</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
