--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <form class="staples_form">
                     <label>
                         <span>Enter an ingredient item you keep as a staple</span>
-                            <input class="staples_input" placeholder="ex) bread"></input>
+                            <input class="staples_input" placeholder="ex) bread"/>
                             <button class="staples_submit" type="submit">Submit item</button>
                     </label>
                 </form>
@@ -22,7 +22,7 @@
             <form class="extras_form">
                 <label>
                     <span class="input-labels">Enter an extra ingredient that you have on hand, that isn't a staple</span>
-                        <input class="extras_input" placeholder="ex) chicken"></input>
+                        <input class="extras_input" placeholder="ex) chicken"/>
                         <button class="extras_submit" type="submit">Submit item</button>
                 </label>
             </form>
