user can close login modal window by clicking the x button

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     </label>
                     <label class="login-password">
                         Password
-                        <input type="password" class="password-input" required>
+                        <input type="password" class="password-input" required />
                     </label>
-                    <button type="submit" class="login-submit-button">Log In</button />
+                    <button type="submit" class="login-submit-button">Log In</button>
                 </form>
             </div>
         </div>
