user can now enter email and password to signup, user email and password are captured

--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
                     <button type="submit" class="login-submit-button">Log In</button>
                 </form>
             </div>
+            <div class="signup-input-container">
+                <form class="signup-form">
+                    <h3 class="signup-header">
+                        Are you new to In-Your-Fridge? Sign up and create an account!
+                    </h3>
+                    <label class="signup-email">
+                        Email
+                        <input type="email" class="signup-email-input" value="" required />
+                    </label>
+                    <label class="signup-password">
+                        Password
+                        <input type="password" class="signup-password-input" required />
+                    </label>
+                    <button type="submit" class="signup-submit-button">Sign Up</button>
+                </form>
+            </div>
         </div>
     </div>
     <div class="all_ingredients_container">
