--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             </button>
             <div class="login-input-container">
                 <form class="login-form">
+                    <h3 class="login-header">
+                        Log in to view your fridge!
+                    </h3>
                     <label class="login-email">
                         Email
                         <input type="email" class="email-input" value="" required />
