--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                     </h3>
                     <label class="login-email">
                         Email
-                        <input type="email" class="email-input" value="" required />
+                        <input type="email" class="login-email-input" value="" required />
                     </label>
                     <label class="login-password">
                         Password
-                        <input type="password" class="password-input" required />
+                        <input type="password" class="login-password-input" required />
                     </label>
                     <button type="submit" class="login-submit-button">Log In</button>
                 </form>
