updated header to list app name without dashes and in lower case

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="signup-input-container">
                 <form class="signup-form">
                     <h3 class="signup-header">
-                        Are you new to In-Your-Fridge? Sign up and create an account!
+                        Are you new to in your fridge? Sign up and create an account!
                     </h3>
                     <label class="signup-email">
                         Email
