--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                     <button type="submit" class="login-submit-button">Log In</button>
                 </form>
             </div>
-            <div class="signup-input-container">
+            <h3 class="signup-header">
+                    Are you new to in your fridge? <span class="signup-anchor">Sign up and create an account!</span>
+            </h3>
+            <div class="signup-input-container hidden">
                 <form class="signup-form">
-                    <h3 class="signup-header">
-                        Are you new to in your fridge? Sign up and create an account!
-                    </h3>
                     <label class="signup-email">
                         Email
                         <input type="email" class="signup-email-input" value="" required />
