user can click log out button to logout, clear local storage of token

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             </form>
         </div>  
     </div>
+    <button type="button" class="logout-button">Log Out</button>
     <script src="main.js"></script>
 </body>
 </html>
