Added delete button to each staple item in our list. Added edit button to show the delete buttons. Added confirm staple button that does not yet have any functionality.

--- a/index.html
+++ b/index.html
@@ -62,11 +62,8 @@
             </div>
         </div>
     </div>
-    <div class="staples-output">
-        
-    </div>
     <div class="all-ingredients-container">
-        <div class="ingredient-container"></div>            
+        <div class="ingredient-container">            
                 <form class="staples-form">
                     <label>
                         <span>Enter an ingredient item you keep as a staple</span>
@@ -75,7 +72,7 @@
                     </label>
                 </form>
         </div>
-        <div class="ingredient-container"></div>            
+        <div class="ingredient-container">            
             <form class="extras-form">
                 <label>
                     <span class="input-labels">Enter an extra ingredient that you have on hand, that isn't a staple</span>
@@ -84,6 +81,14 @@
                 </label>
             </form>
         </div>  
+        <div class="staples-output">
+        </div>
+        <div>
+            <form class='submit-all-staples'>
+                <button class='confirm-staples' type='submit'>Confirm Staples</button>
+                <button class='edit-staples'>Edit Staples</button>
+            </form>
+        </div>
     </div>
     <script src="main.js"></script>
 </body>
