recipe apis functional

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
             </form>
         </div>  
     </div>
+    <script src="variables.js"></script>
     <script src="main.js"></script>
-    <script src="server.js"></script>
+    <!-- <script src="server.js"></script> -->
 </body>
 </html>
