login/logout button text will correspond to login status of user. if button shows as log in, then login modal will display when user clicks log in button

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </form>
         </div>  
     </div>
-    <button type="button" class="logout-button">Log Out</button>
+    <button type="button" class="logout-button">Log In</button>
     <script src="main.js"></script>
 </body>
 </html>
