Removed some of the confirm buttons so that we can move to having only one form submit button that will get all of the ingredients.

--- a/index.html
+++ b/index.html
@@ -83,12 +83,10 @@
         </div>  
         <div class="staples-output">
         </div>
-        <div>
-            <form class='submit-all-staples'>
-                <button class='confirm-staples' type='submit'>Confirm Staples</button>
-                <button class='edit-staples'>Edit Staples</button>
-            </form>
+        <button class='edit-staples' value='staples'>Edit</button>
+        <div class="extras-output">
         </div>
+        <button class='edit-extras' value='extras'>Edit</button>
     </div>
     <button type="button" class="logout-button">Log In</button>
     <script src="main.js"></script>
