Add a button for submitting all ingredients

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
         <div class="extras-output">
         </div>
         <button class='edit-extras' value='extras'>Edit</button>
+        <div>
+            <button class='confirm-ingredients' type='submit'>Confirm Ingredients!</button>
+        </div>
     </div>
     <button type="button" class="logout-button">Log In</button>
     <script src="main.js"></script>
