styling of login modal and font change

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                     </label>
                     <button type="submit" class="login-submit-button">Log In</button>
                 </form>
-                <h3 class="signup-header">
+                <p class="signup-header">
                         Are you new to in your fridge? <span class="signup-anchor">Sign up and create an account!</span>
-                </h3>
+                </p>
             </div>
             <div class="signup-modal-container hidden">
                 <div class="signup-form-container">
