recipes display for user

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
             <button class='confirm-ingredients' type='submit'>Confirm Ingredients!</button>
         </div>
     </div>
+    <div class="recipes-container">
+        
+    </div>
     <button type="button" class="logout-button">Log In</button>
     <script src="main.js"></script>
 </body>
