--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
 </head>
 <body>
+    <nav class="navigation-menu">
+        Welcome
+        <div class="navigation-user-email-container">
+        </div>
+        <button type="button" class="logout-button">Log Out</button>
+    </nav>
     <div class="login-modal-container">
         <div class="login-main-container">
             <button type="button" class="close-login-modal-button">
@@ -97,7 +103,6 @@
     </div>
     <div class="recipes-container">
     </div>
-    <button type="button" class="logout-button">Log In</button>
     <script src="main.js"></script>
 </body>
 </html>
