user can now click a sign up button on the login modal to go to the sign up modal

--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,12 @@
                     </label>
                     <button type="submit" class="login-submit-button">Log In</button>
                 </form>
-                <p class="signup-header">
-                        Are you new to in your fridge? <span class="signup-anchor">Sign up and create an account!</span>
-                </p>
+                <div class="signup-window-button-container">
+                    <p class="signup-header">
+                            Are you new to in your fridge? Sign up and create an account!
+                    </p>
+                    <button type="button" class="signup-window-button">Sign Up</button>
+                </div>
             </div>
             <div class="signup-modal-container hidden">
                 <div class="signup-form-container">
