ingredients show up on a notebook paper-like display

--- a/public/index.html
+++ b/public/index.html
@@ -100,11 +100,11 @@
                 </label>
             </form>
         </div>  
-        <div class="staples-output">
+        <div class="staples-output hidden">
             <!-- <img class="open-fridge" src='./fridge-open.jpg'/> -->
         </div>
         <button class='edit-staples' value='staples'>Edit</button>
-        <div class="extras-output">
+        <div class="extras-output hidden">
         </div>
         <button class='edit-extras' value='extras'>Edit</button>
         <div>
