Uncommented the fridge image.

--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
             </form>
         </div>  
         <div class="staples-output">
-            <!-- <img class="open-fridge" src='./fridge-open.jpg'/> -->
+            <img class="open-fridge" src='./fridge-open.jpg'/>
         </div>
         <button class='edit-staples btn btn-light' value='staples'>Edit</button>
         <div class="extras-output">
