--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
                 <!-- <img alt="Brand" src="/fridge-closed-small.jpg"> -->
             </a>
         <div class="user-saved-recipes">
-            <button type='submit' class='view-saved btn btn-light' data-toggle="modal" data-target="#favoritesModal">♥ recipes</button> 
+            <button type='submit' class='view-saved btn btn-light hidden' data-toggle="modal" data-target="#favoritesModal">♥ recipes</button> 
         </div>
         <div class="spacer"></div>
         <div class="navigation-user-email-container">
@@ -99,33 +99,33 @@
         </div>
     </div>
     <section class="main">
-        <img class="open-fridge" src='./fridge-open.jpg'/>
+        <img class="fridge" src='./fridge-closed.jpg'/>
         <div class="all-ingredients-container">
             <!-- <h1 class="logo"> in your fridge </h1> -->
             <div class="ingredient-container">            
-                    <form class="staples-form">
-                        <label>
-                            <div class="input-labels">
-                                <span>Enter an ingredient item you keep as a staple</span> <br>
-                                <input class="staples-input" placeholder="ex) bread"/>
-                                <button class="staples-submit btn btn-light btn-sm" type="submit">Submit item</button>
-                            </div>
-                        </label>
-                    </form>
-            </div>
-            <div class="ingredient-container">            
+                <form class="staples-form">
+                    <label>
+                        <p class="white">Enter an ingredient item you keep as a staple</p>
+                        <div class="input-labels">
+                            <input class="staples-input" placeholder="ex) bread"/>
+                            <button class="staples-submit btn btn-light btn-sm" type="submit">Submit</button>
+                        </div>
+                    </label>
+                </form>
                 <form class="extras-form">
                     <label>
+                        <p class="white">Enter an extra ingredient that you have on hand, that isn't a staple<p></p>
                         <div class="input-labels">
-                            <span>Enter an extra ingredient that you have on hand, that isn't a staple</span><br>
                             <input class="extras-input" placeholder="ex) chicken"/>
-                            <button class="extras-submit btn btn-light btn-sm" type="submit">Submit item</button>
+                            <button class="extras-submit btn btn-light btn-sm" type="submit">Submit</button>
                         </div>
                     </label>
                 </form>
             </div>  
+            <h2 class='ingredients-header'>Staples</h2>
             <div class="staples-output">
             </div>
+            <h2 class='ingredients-header'>Extras</h2>
             <div class="extras-output">
             </div>
             <div>
