added padding below confirm ingredients button

--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
             <h2 class='ingredients-header'>Extras</h2>
             <div class="extras-output">
             </div>
-            <div>
+            <div class="confirm-ingredients-button-container">
                 <button class='confirm-ingredients btn btn-light' type='submit'>Confirm Ingredients!</button>
             </div>
         </div>
