Added media query to inputs for staples and extras.

--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
                 </form>
                 <form class="extras-form">
                     <label>
-                        <p class="white">Enter an extra ingredient that you have on hand, that isn't a staple<p></p>
+                        <p class="white">Enter an extra ingredient that you have on hand, that isn't a staple</p>
                         <div class="input-labels">
                             <input class="extras-input" placeholder="ex) chicken"/>
                             <button class="extras-submit btn btn-light btn-sm" type="submit">Submit</button>
