user can search for ingredient substitutions

--- a/public/index.html
+++ b/public/index.html
@@ -131,6 +131,19 @@
                 <button class='confirm-ingredients btn btn-light' type='submit'>Confirm Ingredients!</button>
             </div>
         </div>
+        <div class="substitute-ingredient-container">
+            <form class="substitute-ingredient">
+                <label>
+                    <p class="white">Enter an ingredient to search for substitutions</p>
+                    <div class="input-labels">
+                        <input class="substitute-ingredient-input" placeholder="ex) butter"/>
+                        <button class="substitute-ingredient-submit btn btn-light btn-sm" type="submit">Submit</button>
+                    </div>
+                </label>
+            </form>
+            <div class="ingredient-substitutions">
+            </div>
+        </div>
     </section>
     <div class="recipes-container">
     </div>
